bat.string1.lessons.bat.string1.Last2.scala.error
last2:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (str.charAt(n-2).toString+str.charAt(n-1).toString)
  ^